# optionscanner

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SIGNAL_RANKING.md  ai_agents.py  backtest.py  config.yaml  docker-compose.yml  docker_utils.py  earnings_data.py  economic_calendar_ai.py  execution.py  gemini_client.py  gemini_client_v2.py  logging_utils.py  main.py  market_state.py  option_data.py  portfolio_monitor.py  position_cache.py  pyproject.toml  reddit_monitor.py  refresh_economic_calendar.py  requirements.txt  risk.yaml  runner.py  scheduling.py  signal_ranking.py  stock_data.py  technical_indicators.py  test_ibkr_connection.py  trade_history.py  whale_detector.py
.github/: DEPLOYMENT.md
config/: secrets.example.yaml
gateway/: .gitignore
notifications/: __init__.py  emailer.py  slack.py
portfolio/: __init__.py  evaluation.py  greeks.py  manager.py  positions.py  report.py  rules.py
strategies/: __init__.py  base.py  strategy_covered_call.py  strategy_earnings_gambal.py  strategy_iron_condor.py  strategy_pmcc.py  strategy_put_credit_spread.py  strategy_tqqq_rotation.py  strategy_vertical_spread.py  strategy_vix_fear_fade.py
tests/: __init__.py  conftest.py  test_ai_agents.py  test_ai_agents_integration.py  test_bs_model.py  test_execution_integration.py  test_exit_config.py  test_flow.py  test_gemini_call.py  test_history_store.py  test_ibkr_integration.py  test_ibkr_options_integration.py  test_local_data_integration.py  test_loki_integration.py  test_main.py  test_market_hours.py  test_market_state.py  test_options_filters.py  test_patterns.py  test_portfolio_evaluation.py  test_portfolio_manager.py  test_position_cache.py  (+10 more)
(+61 files in other folders)
